# solitaire-solver

./: .gitignore  Cargo.toml  README.md
docs/: GAME_STRING.md
examples/: find_seed_library.rs  native_parallel_solve.rs  profile_deals.rs  solve.rs  visualize.rs
src/: lib.rs
tests/: reference_deals.rs
