[package]
name = "solitaire-solver"
version = "0.1.0"
edition = "2021"
description = "Perfect-information draw-three Klondike solver for solitaire-web"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = "0.2"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
